baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_field_alias/baml_tests__diagnostic_errors__duplicate_field_alias__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.AliasEqualsOwnName {
  a: string
  b: string
}
class user.AliasVsAlias {
  a: string
  b: string
}
class user.AllDistinct {
  a: string
  b: string
  c: string
}
class user.NameVsAlias {
  x: string
  b: string
}
class user.NormalizedCollision {
  a: string
  b: string
}
class user.SkippedDoesNotCollide {
  a: string
  b: string
}
class user.TripleCollision {
  first: string
  second: string
  shared: string
}
