baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_field_alias/baml_tests__diagnostic_errors__duplicate_field_alias__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.AliasVsAlias {
  a: string @alias("x")
  b: string @alias("x")
}
class user.NameVsAlias {
  x: string
  b: string @alias("x")
}
class user.TripleCollision {
  first: string @alias("shared")
  second: string @alias("shared")
  shared: string
}
class user.NormalizedCollision {
  a: string @alias("q")
  b: string @alias(`q`)
}
class user.AliasEqualsOwnName {
  a: string @alias("a")
  b: string
}
class user.SkippedDoesNotCollide {
  a: string @alias("x")
  b: string @alias("x") @skip
}
class user.AllDistinct {
  a: string @alias("alpha")
  b: string @alias("beta")
  c: string
}
class user.AliasVsAlias$stream {
  a: string | null @alias("x")
  b: string | null @alias("x")
}
class user.NameVsAlias$stream {
  x: string | null
  b: string | null @alias("x")
}
class user.TripleCollision$stream {
  first: string | null @alias("shared")
  second: string | null @alias("shared")
  shared: string | null
}
class user.NormalizedCollision$stream {
  a: string | null @alias("q")
  b: string | null @alias(`q`)
}
class user.AliasEqualsOwnName$stream {
  a: string | null @alias("a")
  b: string | null
}
class user.SkippedDoesNotCollide$stream {
  a: string | null @alias("x")
  b: string | null @alias("x") @skip
}
class user.AllDistinct$stream {
  a: string | null @alias("alpha")
  b: string | null @alias("beta")
  c: string | null
}
